# automated-verif-cs267-code

./: .envrc  flake.nix  haskell-template.cabal  ltl.cabal
automaton/: Main.hs
bdd/: Main.hs
lib/: Boolean.hs  Prelude.hs  TransitionSystem.hs
src/: Main.hs
