cabal-version:      2.4
name:               ltl
version:            0.1.0.0
license:            MIT
copyright:          2022 Thanawat Techaumnuaiwit
maintainer:         thanawat@ucsb.edu
author:             Sridhar Ratnakumar
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    , aeson
    , async
    , base-noprelude    >=4.13.0.0 && <4.18.0.0.0
    , data-default
    , diagrams
    , diagrams-contrib
    , diagrams-lib
    , diagrams-svg
    , directory
    , filepath
    , flow
    , optics-core
    , relude            >=1.0
    , shower
    , with-utf8
    , containers
    , cleff

  default-language:   Haskell2010

library
  import:          shared
  exposed-modules:
    Prelude
    TransitionSystem

  hs-source-dirs:  lib

executable mu-calc
  import:          shared
  main-is:         Main.hs
  hs-source-dirs:  mu-calc
  exposed-modules: Main
  build-depends:   ltl

executable automaton
  -- import:          shared
  ghc-options: -Wincomplete-patterns -fno-warn-unused-matches -fno-warn-unused-binds
  main-is:         Main.hs
  hs-source-dirs:  automaton
  exposed-modules: Main
  build-depends: base    >=4.13.0.0 && <4.18.0.0.0
               , cleff
               , flow
               , graphviz
               , fgl
               , containers
               , text
               , lens
  default-extensions:
        BangPatterns
        BlockArguments
        ConstraintKinds
        DataKinds
        DeriveAnyClass
        DerivingStrategies
        DerivingVia
        EmptyCase
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        GeneralizedNewtypeDeriving
        LambdaCase
        MagicHash
        NoStarIsType
        PatternSynonyms
        PolyKinds
        RankNTypes
        RoleAnnotations
        ScopedTypeVariables
        StandaloneDeriving
        TemplateHaskell
        TupleSections
        TypeApplications
        TypeFamilies
        TypeOperators
        UndecidableInstances
        UnicodeSyntax
        UnliftedFFITypes
        ViewPatterns
        OverloadedStrings

executable bdd
  import:          shared
  main-is:         Main.hs
  hs-source-dirs:  bdd
  exposed-modules: Main
  build-depends:   ltl
